--- a/Client/package.json
+++ b/Client/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "antd": "^5.24.4",
     "axios": "^1.8.3",
+    "date-fns": "^2.30.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
@@ -19,6 +22,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-slick": "^0.30.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.70.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
